[package]
name = "mw_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
rand = "0.8.5"
append-only-vec = "0.1.2"
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"
queues = "1.0.2"